# onpremdoc

./: .env.example  .gitignore  Document_Processing_Pipeline_Steps.xlsx  README.md  afterword.txt  auth.py  chat_api.py  claim_processor.py  db.py  detection.py  detectiondeepseek.py  detectiondeepseek_plugin.py  economics_tracker.py  eg.json  fill_pipeline_excel.py  gquality(PP-OCRv5).md  gquality(deepseec).md  main.py  mcp_server.py  page_summarization.py  pipeline_excel_dump.txt  read_excel_pipeline.py  regenerate_unified.py  requirements.txt  retrivalAgentE.py  retrivalE.py  run.txt  test_chunk_matching.py  vectorizerE.py  visualizeGraphE.py
.cursor/: mcp.json
config/: __init__.py  inference_config.py
docling-deepseek-ocr/: README.md  pyproject.toml
docling-deepseek-ocr/src/docling_deepseek_ocr/: __init__.py  model.py  options.py  plugin.py
docs/: MCP_INSPECTOR.md  README.md
economics/: usage_2026-02-03.jsonl  usage_2026-02-22.jsonl  usage_2026-02-23.jsonl  usage_2026-02-24.jsonl  usage_2026-02-25.jsonl  usage_2026-02-26.jsonl  usage_2026-03-01.jsonl  usage_2026-03-02.jsonl  usage_2026-03-04.jsonl  usage_2026-03-05.jsonl  usage_2026-03-06.jsonl  usage_2026-03-08.jsonl  usage_2026-03-09.jsonl
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
hierarchical/: __init__.py  postprocessor.py
hierarchical_stub/: __init__.py  postprocessor.py
scripts/: test_mcp_stdio.py
services/: __init__.py  document_service.py
uml/: 01_pdf_upload_and_processing.puml  03_query_and_retrieval.puml
utils/: page_deduper.py
(+39 files in other folders)
