[project]
name = "docling-deepseek-ocr"
version = "0.1.0"
description = "A Docling OCR plugin that uses DeepSeek-OCR as the text recognition backend."
authors = [
    { name = "Zealits2", email = "noreply@example.com" },
]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "docling>=2.73",
    "httpx>=0.27",
    "pillow>=10.0",
]

[project.entry-points."docling"]
docling_deepseek_ocr = "docling_deepseek_ocr.plugin"

[project.urls]
Homepage = "https://example.com/docling-deepseek-ocr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_deepseek_ocr"]

